tests/type-errors/state_assignment.arl
archetype state_assignment

states =
| Created initial

entry myaction () {
  effect {
    state := Created
  }
}
